template et css

--- a/views/amicale_views.xml
+++ b/views/amicale_views.xml
@@ -4,8 +4,13 @@
 <record id="amicales_amicale_action" model="ir.actions.act_window">
     <field name="name">Amicale</field>
     <field name="res_model">amicales.amicale</field>
-    <field name="help" type="html">
-        	<p class="o_view_nocontent_smiling_face">
+    <field name="help" type="html" >
+         <data>
+            <xpath expr="." position="inside">
+            <link rel="stylesheet" type="text/css" href="amicales\static\src\css\style.css"/>
+            </xpath>
+            </data>
+        	<p class="o_view_nocontent_smiling_face" style="background-color: #f2f2f2;">
             	Creer Amicale
         	</p>
     	</field>
@@ -15,13 +20,21 @@
       <field name="name">amicales.amicale.form</field>
       <field name="model">amicales.amicale</field>
       <field name="arch" type="xml">
+           <data>
+            <xpath expr="." position="inside">
+            <link rel="stylesheet" type="text/css" href="amicales\static\src\css\style.css"/>
+            </xpath>
+            </data>
         <form>
           <sheet>
+               <div class="my-custom-class">
+
             <group>
               <group>
                 <field name="nomAmicale"/>
               </group>
             </group>
+               </div>
           </sheet>
         </form>
       </field>
@@ -34,8 +47,8 @@
       <field name="arch" type="xml">
         <tree>
           <field name="nomAmicale"/>
-          <field name="membre_ids"></field>
-          <field name="commision_ids"></field>
+          <field name="membre_ids"/>
+          <field name="commision_ids"/>
         </tree>
       </field>
     </record>
