--- a/views/departement_views.xml
+++ b/views/departement_views.xml
@@ -5,6 +5,11 @@
     <field name="name">Departement</field>
     <field name="res_model">amicales.departement</field>
     <field name="help" type="html">
+         <data>
+            <xpath expr="." position="inside">
+            <link rel="stylesheet" type="text/css" href="amicales\static\src\css\style.css"/>
+            </xpath>
+            </data>
         	<p class="o_view_nocontent_smiling_face">
             	Creer departement
         	</p>
@@ -15,14 +20,22 @@
       <field name="name">amicales.departement.form</field>
       <field name="model">amicales.departement</field>
       <field name="arch" type="xml">
+           <data>
+            <xpath expr="." position="inside">
+            <link rel="stylesheet" type="text/css" href="amicales\static\src\css\style.css"/>
+            </xpath>
+            </data>
         <form>
           <sheet>
+               <div class="my-custom-class">
+
             <group>
               <group>
                 <field name="nomDepartement"/>
-                <field name="faculte_id"></field>
+                <field name="faculte_id"/>
               </group>
             </group>
+               </div>
           </sheet>
         </form>
       </field>
