--- a/views/niveau_views.xml
+++ b/views/niveau_views.xml
@@ -5,6 +5,11 @@
     <field name="name">niveau</field>
     <field name="res_model">amicales.niveau</field>
     <field name="help" type="html">
+         <data>
+            <xpath expr="." position="inside">
+            <link rel="stylesheet" type="text/css" href="amicales\static\src\css\style.css"/>
+            </xpath>
+            </data>
         	<p class="o_view_nocontent_smiling_face">
             	Creer niveau
         	</p>
@@ -14,14 +19,22 @@
     <field name="name">amicales.niveau.form</field>
     <field name="model">amicales.niveau</field>
     <field name="arch" type="xml">
+         <data>
+            <xpath expr="." position="inside">
+            <link rel="stylesheet" type="text/css" href="amicales\static\src\css\style.css"/>
+            </xpath>
+            </data>
     <form>
         <sheet>
+             <div class="my-custom-class">
+
            <group>
              <group>
                 <field name="niveau"/>
-                <field name="departement_id"></field>
+                <field name="departement_id"/>
             </group>
            </group>
+             </div>
         </sheet>
         </form>
       </field>
