--- a/views/faculte_views.xml
+++ b/views/faculte_views.xml
@@ -5,6 +5,11 @@
     <field name="name">Faculte</field>
     <field name="res_model">amicales.faculte</field>
     <field name="help" type="html">
+         <data>
+            <xpath expr="." position="inside">
+            <link rel="stylesheet" type="text/css" href="amicales\static\src\css\style.css"/>
+            </xpath>
+            </data>
         	<p class="o_view_nocontent_smiling_face">
             	Creer faculte
         	</p>
@@ -15,14 +20,22 @@
     <field name="name">amicales.faculte.form</field>
     <field name="model">amicales.faculte</field>
     <field name="arch" type="xml">
+         <data>
+            <xpath expr="." position="inside">
+            <link rel="stylesheet" type="text/css" href="amicales\static\src\css\style.css"/>
+            </xpath>
+            </data>
     <form>
         <sheet>
+             <div class="my-custom-class">
+
             <group>
              <group>
                <field name="nomFaculte"/>
                <field name="universite_id"></field>
              </group>
             </group>
+             </div>
         </sheet>
         </form>
       </field>
@@ -32,11 +45,16 @@
       <field name="name">amicales.faculte.list</field>
       <field name="model">amicales.faculte</field>
       <field name="arch" type="xml">
+
+
         <tree>
+
           <field name="nomFaculte"/>
-          <field name="universite_id"></field>
-          <field name="departement_ids"></field>
+          <field name="universite_id"/>
+          <field name="departement_ids"/>
+
         </tree>
+
       </field>
     </record>
 <menuitem
