--- a/views/membre_views.xml
+++ b/views/membre_views.xml
@@ -5,7 +5,12 @@
         <field name="name">Membre</field>
         <field name="res_model">amicales.membre</field>
         <field name="help" type="html">
-                <p class="o_view_nocontent_smiling_face">
+            <data>
+                <xpath expr="." position="inside">
+                    <link rel="stylesheet" type="text/css" href="amicales\static\src\css\style.css"/>
+                </xpath>
+            </data>
+                <p>
                     Creer Membre
                 </p>
             </field>
@@ -16,34 +21,39 @@
         <field name="name">amicales.membre.form</field>
         <field name="model">amicales.membre</field>
         <field name="arch" type="xml">
+            <data>
+            <xpath expr="." position="inside">
+            <link rel="stylesheet" type="text/css" href="amicales\static\src\css\style.css"/>
+            </xpath>
+            </data>
             <form>
+                <header>
+
+                </header>
             <sheet>
+                <div class="my-custom-class">
+
+
                 <group>
-                <group>
+                <group >
                     <field name="prenom"/>
-                    <field name="nom"></field>
+                    <field name="nom"/>
+                    <field name="telephone"/>
+                    <field name="adresse"/>
+                    <field name="age"/>
+                    <field name="matricule"/>
                 </group>
                 <group>
-                    
-                    <field name="telephone"></field>
-                    <field name="adresse"></field>
-                </group>
-                <group>
-                    <field name="age"></field>
-                    <field name="departement_id"></field>
-                
-                </group>
-                <group>
-                    <field name="niveau_id"></field>
-                    <field name="promotion_id"></field>
-                    <field name="commission_id"></field>
-                </group>
-                <group>
-                    <field name="matricule"></field>
-                    <field name="amicale_id"></field>
-                    <field name="role"></field>
+
+                    <field name="departement_id"/>
+                    <field name="niveau_id"/>
+                    <field name="promotion_id"/>
+                    <field name="commission_id"/>
+                    <field name="amicale_id"/>
+                    <field name="role"/>
                 </group>
                 </group>
+                 </div>
             </sheet>
             </form>
         </field>
@@ -66,8 +76,10 @@
           <field name="matricule"></field>
           <field name="amicale_id"></field>
           <field name="commission_id"></field>
+
         </tree>
       </field>
+
     </record>
     <menuitem
         id="menu_amicales_membre"
