--- a/static/src/css/tooplate-style.css
+++ b/static/src/css/tooplate-style.css
@@ -69,7 +69,7 @@ p {
 	font-size: 1.8rem;
 	font-weight: 700;
 }
-.navbar a { color: black; }
+.navbar a { color: ; }
 
 .navbar-toggler-icon {
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(238, 80, 87, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
@@ -128,7 +128,7 @@ p {
 }
 
 #tm-section-1 {	
-	background-image: url('/amicales/static/src/images/2.jpg');
+	background-image: url('/amicales/static/src/images/fond.jpg');
 	height: 515px;
 }
 
