--- a/static/src/css/main.css
+++ b/static/src/css/main.css
@@ -40,15 +40,38 @@
     text-decoration: none;
   }
   
-  h1,
+
   h2,
   h3,
   h4,
   h5,
   h6 {
     font-family: var(--font-primary);
+
   }
-  
+
+  .tm-section-1 {
+    width:100%;
+	padding:10px;
+	padding-left: 5px;
+	padding-right: 5px;
+}
+#tm-section-1 #div2{
+ 	height: 515px;
+}
+.container{
+padding-left: 0px;
+	padding-right: 0px;
+}
+
+
+
+.carousel-item  img{
+  width: 100%;
+  height:510px;
+
+}
+
   /*--------------------------------------------------------------
   # Sections & Section Header
   --------------------------------------------------------------*/
@@ -58,7 +81,7 @@
   }
   
   .sections-bg {
-    background-color: #f6f6f6;
+    background-color:#008B8B;
   }
   
   .section-header {
@@ -130,7 +153,7 @@
   }
   
   .breadcrumbs nav ol a {
-    color: var(--color-primary);
+
     transition: 0.3s;
   }
   
@@ -339,6 +362,7 @@
   @media (min-width: 1280px) {
     .navbar {
       padding: 0;
+
     }
   
     .navbar ul {
@@ -2597,8 +2621,8 @@
   --------------------------------------------------------------*/
   .footer {
     font-size: 14px;
-    background-color: var(--color-primary);
-    padding: 50px 0;
+    background-color: #008B8B;
+    padding: 10px 0;
     color: white;
   }
   
