--- a/views/membre_views.xml
+++ b/views/membre_views.xml
@@ -7,7 +7,7 @@
         <field name="help" type="html">
             <data>
                 <xpath expr="." position="inside">
-                    <link rel="stylesheet" type="text/css" href="amicales\static\src\css\style.css"/>
+                    <link rel="stylesheet" type="text/css" href="amicales/static/src/css/style.css"/>
                 </xpath>
             </data>
                 <p>
@@ -23,7 +23,7 @@
         <field name="arch" type="xml">
             <data>
             <xpath expr="." position="inside">
-            <link rel="stylesheet" type="text/css" href="amicales\static\src\css\style.css"/>
+            <link rel="stylesheet" type="text/css" href="amicales/static/src/css/style.css"/>
             </xpath>
             </data>
             <form>
