--- a/views/universite_views.xml
+++ b/views/universite_views.xml
@@ -7,7 +7,7 @@
     <field name="help" type="html">
          <data>
             <xpath expr="." position="inside">
-            <link rel="stylesheet" type="text/css" href="amicales\static\src\css\style.css"/>
+            <link rel="stylesheet" type="text/css" href="amicales/static/src/css/style.css"/>
             </xpath>
             </data>
 
@@ -24,9 +24,9 @@
       <field name="arch" type="xml">
         <data>
             <xpath expr="." position="inside">
-            <link rel="stylesheet" type="text/css" href="amicales\static\src\css\style.css"/>
+            <link rel="stylesheet" type="text/css" href="amicales/static/src/css/style.css"/>
             </xpath>
-            </data>
+        </data>
         <form>
           <sheet>
                <div class="my-custom-class">
