--- a/templates/commission.xml
+++ b/templates/commission.xml
@@ -1,5 +1,5 @@
 <odoo>
-    <template id="faculte_template" name="faculte Template" >
+    <template id="commission_template" name="commission Template" >
         <t t-call="amicales.header"/>
         <xpath expr="." position="inside">
             <div class="row">
@@ -8,17 +8,17 @@
                     <table class="table table-bordered">
                         <thead>
                             <tr>
-                                <th>Nom Faculte</th>
-                                <th>Universite</th>
-                                <th>Departement</th>
+                                <th>Nom Commission</th>
+                                <th>Membre</th>
+                                <th>Amicale</th>
                             </tr>
                         </thead>
                         <tbody>
-                            <t t-foreach="facultes" t-as="faculte">
+                            <t t-foreach="commissions" t-as="commission">
                                 <tr>
-                                    <td><t t-esc="faculte.nomFaculte"/></td>
-                                    <td><t t-esc="faculte.universite_id.nomUniversite"/></td>
-                                    <td><t t-esc="faculte.departement_ids"/></td>
+                                    <td><t t-esc="commission.nomCommission"/></td>
+                                    <td><t t-esc="commission.membre_ids"/></td>
+                                    <td><t t-esc="commission.amicale_id.nomAmicale"/></td>
                                 </tr>
                             </t>
                         </tbody>
