--- a/templates/commission_create.xml
+++ b/templates/commission_create.xml
@@ -1,5 +1,5 @@
 <odoo>
-    <template id="createetudiant">
+    <template id="createcommission">
              <t t-call="amicales.header"/>
             <form action="/createE" method="post">
                 <div class="my-custom-class">
