--- a/templates/header.xml
+++ b/templates/header.xml
@@ -25,7 +25,7 @@
     <li><a href="/amicale">Organigramme</a></li>
     <li><a href="/programme">Programme</a></li>
     <li><a href="/a_propos">A propos de nous</a></li>
-    <li><a href="/membre">devenir membre</a></li>
+    <li><a href="/adherer">devenir membre</a></li>
     <li><a href="/fairedon">Faire un don</a></li>
     <li><a href="#">Login</a></li>
   </ul>
