--- a/templates/universite_create.xml
+++ b/templates/universite_create.xml
@@ -1,40 +1,23 @@
 <odoo>
-    <template id="createetudiant">
+    <template id="createuniversite">
              <t t-call="amicales.header"/>
-            <form action="/createE" method="post">
+            <form action="/createU" method="post">
                 <div class="my-custom-class">
                     <group>
                         <group>
-                            <label for="prenom">Prénom:</label>
-                            <input type="text" name="prenom" id="prenom" required="true"/>
-                            <label for="nom">Nom:</label>
-                            <input type="text" name="nom" id="nom" required="true"/>
-                            <label for="age">Âge:</label>
-                            <input type="number" name="age" id="age" required="true"/>
-                            <label for="telephone">Téléphone:</label>
-                            <input type="tel" name="telephone" id="telephone" required="true"/>
-                        </group>
-                        <group>
+                            <label for="nomUniversite">Nom Universite:</label>
+                            <input type="text" name="nomUniversite" id="nomUniversite" required="true"/>
                             <label for="adresse">Adresse:</label>
                             <input type="text" name="adresse" id="adresse" required="true"/>
-                            <label for="departement_id">Département:</label>
-                            <select name="departement_id" id="departement_id" required="true">
-                                <t t-foreach="departements" t-as="dept">
-                                    <option t-att-value="dept.id"><t t-esc="dept.nomDepartement"/></option>
-                                </t>
-                            </select>
-                            <label for="niveau_id">Niveau:</label>
-                            <select name="niveau_id" id="niveau_id" required="true">
-                                <t t-foreach="niveaux" t-as="niveau">
-                                    <option t-att-value="niveau.id"><t t-esc="niveau.niveau"/></option>
-                                </t>
-                            </select>
-                            <label for="promotion_id">Promotion:</label>
-                            <select name="promotion_id" id="promotion_id" required="true">
-                                <t t-foreach="promotions" t-as="promotion">
-                                    <option t-att-value="promotion.id"><t t-esc="promotion.promotion"/></option>
-                                </t>
-                            </select>
+                        </group>
+                        <group>
+                            <label for="faculte_ids">Faculté:</label>
+                                <select name="faculte_ids[]">
+                                    <t t-foreach="facultes" t-as="faculte">
+                                        <option t-att-value="faculte.id" t-att-selected="faculte.id in faculte_ids"><t t-esc="faculte.nomFaculte"/></option>
+                                    </t>
+                                </select>
+
                         </group>
                     </group>
                     <button type="submit">Enregistrer</button>
