--- a/templates/header.xml
+++ b/templates/header.xml
@@ -4,6 +4,7 @@
             <link rel="stylesheet" href="amicales/static/src/css/main.css"/>
             <link rel="stylesheet" href="amicales/static/src/css/style.css"/>
             <link rel="stylesheet" href="amicales/static/src/css/bootstrap.min.css"/>
+            <link rel="stylesheet" href="amicales/static/src/css/form.css"/>
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"/>
             <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
             <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -25,7 +26,7 @@
     <li><a href="/amicale">Organigramme</a></li>
     <li><a href="/programme">Programme</a></li>
     <li><a href="/a_propos">A propos de nous</a></li>
-    <li><a href="/adherer">devenir membre</a></li>
+    <li><a href="/admin">devenir membre</a></li>
     <li><a href="/fairedon">Faire un don</a></li>
     <li><a href="#">Login</a></li>
   </ul>
