--- a/templates/promotion_create.xml
+++ b/templates/promotion_create.xml
@@ -1,43 +1,27 @@
 <odoo>
-    <template id="createpromossion">
+    <template id="createpromotion">
              <t t-call="amicales.header"/>
-            <form action="/createE" method="post">
+            <form action="/createP" method="post">
                 <div class="my-custom-class">
                     <group>
                         <group>
-                            <label for="prenom">Prénom:</label>
-                            <input type="text" name="prenom" id="prenom" required="true"/>
-                            <label for="nom">Nom:</label>
-                            <input type="text" name="nom" id="nom" required="true"/>
-                            <label for="age">Âge:</label>
-                            <input type="number" name="age" id="age" required="true"/>
-                            <label for="telephone">Téléphone:</label>
-                            <input type="tel" name="telephone" id="telephone" required="true"/>
-                        </group>
-                        <group>
-                            <label for="adresse">Adresse:</label>
-                            <input type="text" name="adresse" id="adresse" required="true"/>
-                            <label for="departement_id">Département:</label>
-                            <select name="departement_id" id="departement_id" required="true">
-                                <t t-foreach="departements" t-as="dept">
-                                    <option t-att-value="dept.id"><t t-esc="dept.nomDepartement"/></option>
-                                </t>
-                            </select>
+                            <label for="promotion">Promotion:</label>
+                            <input type="text" name="promotion" id="promotion" required="true"/>
+                            <label for="datePromo">Nom Universite:</label>
+                            <br/>
+                            <input type="Date" name="datePromo" id="datePromo" required="true"/>
+                            <br/>
+                            <label for="description">Description:</label>
+                            <input type="text" name="description" id="description" required="true"/>
                             <label for="niveau_id">Niveau:</label>
                             <select name="niveau_id" id="niveau_id" required="true">
                                 <t t-foreach="niveaux" t-as="niveau">
-                                    <option t-att-value="niveau.id"><t t-esc="niveau.niveau"/></option>
-                                </t>
-                            </select>
-                            <label for="promotion_id">Promotion:</label>
-                            <select name="promotion_id" id="promotion_id" required="true">
-                                <t t-foreach="promotions" t-as="promotion">
-                                    <option t-att-value="promotion.id"><t t-esc="promotion.promotion"/></option>
-                                </t>
+                                    <option t-att-value="niveau.id"><t t-esc="niveau.niveau"/></option>                                </t>
                             </select>
                         </group>
+                            <button type="submit">Enregistrer</button>
                     </group>
-                    <button type="submit">Enregistrer</button>
+
                 </div>
             </form>
          <t t-call="amicales.footer"/>
